Added different values and dimens for margins. Refactor the item list card view.

--- a/XYZReader/src/main/res/layout/new_fragment_article_detail.xml
+++ b/XYZReader/src/main/res/layout/new_fragment_article_detail.xml
@@ -36,6 +36,8 @@
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
+                android:layout_marginLeft="@dimen/margin_24"
+                android:layout_marginRight="@dimen/margin_8"
                 app:layout_collapseMode="pin"
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
@@ -45,7 +47,7 @@
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#333"
+        android:background="#ff333333"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <LinearLayout
@@ -53,7 +55,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:background="@android:color/transparent"
             android:paddingLeft="@dimen/detail_inner_horiz_margin"
             android:paddingRight="@dimen/detail_inner_horiz_margin"
             android:paddingTop="@dimen/detail_metabar_vert_padding"
@@ -71,14 +72,15 @@
                 android:id="@+id/article_body"
                 style="?android:attr/textAppearanceMedium"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="0dp"
                 android:layout_marginLeft="@dimen/detail_inner_horiz_margin"
                 android:layout_marginRight="@dimen/detail_inner_horiz_margin"
-                android:paddingBottom="@dimen/detail_body_bottom_margin"
+                android:paddingBottom="@dimen/detail_inner_horiz_margin"
                 android:textColor="@color/ltgray"
                 android:textColorLink="@color/accent"
                 android:textSize="@dimen/detail_body_text_size"
-                android:lineSpacingMultiplier="@fraction/detail_body_line_spacing_multiplier" />
+                android:lineSpacingMultiplier="@fraction/detail_body_line_spacing_multiplier"
+                android:layout_weight="1" />
         </LinearLayout>
 
     </android.support.v4.widget.NestedScrollView>
@@ -94,4 +96,5 @@
         android:src="@drawable/ic_share"
         android:elevation="@dimen/fab_elevation"
         android:contentDescription="@string/action_share" />
+
 </android.support.design.widget.CoordinatorLayout>
