--- a/XYZReader/src/main/res/layout-land/new_fragment_article_detail.xml
+++ b/XYZReader/src/main/res/layout-land/new_fragment_article_detail.xml
@@ -10,10 +10,10 @@
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
         android:layout_width="match_parent"
-        android:background="@mipmap/ic_launcher"
         android:layout_height="@dimen/app_bar_height"
         android:elevation="@dimen/app_bar_elevation"
         android:fitsSystemWindows="true"
+        android:background="@mipmap/ic_launcher"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
         <android.support.design.widget.CollapsingToolbarLayout
@@ -23,18 +23,16 @@
             android:fitsSystemWindows="true"
             android:theme="@style/ThemeOverlay.AppCompat.Dark"
             app:contentScrim="?attr/colorPrimary"
-            app:collapsedTitleGravity="center_vertical"
             app:expandedTitleMarginEnd="@dimen/article_keylines"
             app:expandedTitleMarginStart="@dimen/md_keylines"
+            app:collapsedTitleGravity="center_vertical"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
             <ImageView
                 android:id="@+id/photo"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:scaleType="centerCrop"
-                android:fitsSystemWindows="true"
-                app:layout_collapseMode="parallax"/>
+                android:scaleType="centerCrop" />
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
@@ -51,13 +49,17 @@
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginLeft="@dimen/margin_8"
+        android:layout_marginRight="@dimen/margin_8"
         android:background="#ff333333"
+        android:id="@+id/nested"
+        app:behavior_overlapTop="@dimen/overlap_top"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <android.support.v7.widget.CardView
             app:cardElevation="@dimen/cardview_default_elevation"
-            android:layout_width="match_parent"
             app:cardBackgroundColor="#ff333333"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
         <LinearLayout
@@ -77,7 +79,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/margin_16"
-                android:layout_marginTop="@dimen/margin_8"
                 android:textColor="#8fff" />
 
             <TextView
@@ -91,7 +92,6 @@
                 android:lineSpacingMultiplier="@fraction/detail_body_line_spacing_multiplier"
                 android:layout_weight="1" />
         </LinearLayout>
-
         </android.support.v7.widget.CardView>
 
     </android.support.v4.widget.NestedScrollView>
@@ -99,15 +99,16 @@
     <android.support.design.widget.FloatingActionButton android:id="@+id/share_fab"
         android:stateListAnimator="@anim/fab_state_list_anim"
         android:background="@drawable/add_fab_background"
+        android:layout_gravity="bottom|end"
         android:layout_marginRight="@dimen/fab_margin"
         android:layout_marginBottom="@dimen/fab_margin"
         android:layout_width="@dimen/design_fab_size_normal"
         android:layout_height="@dimen/design_fab_size_normal"
         android:src="@drawable/ic_share"
         android:elevation="@dimen/fab_elevation"
-        android:contentDescription="@string/action_share"
-        app:layout_anchor="@id/appbar"
+        app:layout_anchor="@id/nested"
+        app:layout_anchorGravity="bottom|right|end"
         app:theme="@style/ThemeOverlay.AppCompat.Light"
-        app:layout_anchorGravity="bottom|right|end"/>
+        android:contentDescription="@string/action_share" />
 
 </android.support.design.widget.CoordinatorLayout>
