--- a/XYZReader/src/main/res/values-sw600dp-land/macro_layout.xml
+++ b/XYZReader/src/main/res/values-sw600dp-land/macro_layout.xml
@@ -4,4 +4,8 @@
 
     <dimen name="detail_photo_height">600dp</dimen>
     <dimen name="detail_card_top_margin">256dp</dimen>
+    <bool name="isLand">true</bool>
+    <integer name="list_column_count">4</integer>
+
+    <dimen name="app_bar_height">384dp</dimen>
 </resources>
