--- a/XYZReader/src/main/res/values-sw600dp/macro_layout.xml
+++ b/XYZReader/src/main/res/values-sw600dp/macro_layout.xml
@@ -6,4 +6,8 @@
     <dimen name="detail_metabar_vert_padding">32dp</dimen>
     <dimen name="detail_metabar_title_bottom_padding">8dp</dimen>
     <dimen name="detail_body_bottom_margin">96dp</dimen>
+    <integer name="list_column_count">3</integer>
+
+    <dimen name="app_bar_height">300dp</dimen>
+    <dimen name="margin_left_toolbar">32dp</dimen>
 </resources>
