--- a/XYZReader/src/main/res/values/dimens.xml
+++ b/XYZReader/src/main/res/values/dimens.xml
@@ -58,9 +58,9 @@
 
     <!-- detail -->
     <dimen name="detail_title_text_size">42sp</dimen>
-    <dimen name="detail_body_text_size">20sp</dimen>
-    <item name="detail_body_line_spacing_multiplier" format="float" type="fraction">1.3</item>
-    <dimen name="fab_margin">24dp</dimen>
+    <dimen name="detail_body_text_size">14sp</dimen>
+    <item name="detail_body_line_spacing_multiplier" format="float" type="fraction">1</item>
+    <dimen name="fab_margin">8dp</dimen>
 
     <!--Margins global-->
     <dimen name="margin_16">16dp</dimen>
@@ -76,5 +76,12 @@
 
     <!--Values for the thumbnail-->
     <dimen name="height_thumbnail">150dp</dimen>
+
+    <bool name="isTablet">false</bool>
+    <bool name="isLand">false</bool>
+
+    <dimen name="overlap_top">24dp</dimen>
+    <dimen name="margin_top_swipe">64dp</dimen>
+    <dimen name="margin_left_toolbar">24dp</dimen>
 
 </resources>
